# CamAndScreenStreamGstreamer

./: CMakeLists.txt  CamStreamer.cpp  Makefile  ScreenStreamer.cpp  install_gstreamer.sh  main.c  main_screen  main_screen.c  stream.py
viewrtsp/: RtspPlayer.qml  main.qml  qml.qrc  viewrtsp.pro
